# MOD-EmpiricalBathymetry

./: LICENSE  README.md  pyproject.toml  requirements.txt
demo/: sentinel2.py
empbathy/: __init__.py
empbathy/core/: filters.py  method.py
empbathy/tools/: metadata.py  plotting.py  utils.py
sdam/: __init__.py  core.py  filter.py  results.py  utilities.py  visuals.py
