[project]
name = "mod-empiricalbathymetry"
version = "0.1.0"
description = "Python implementation of Stumpf's empirical bathymetry method."
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "geopandas==1.0.1",
    "numpy==2.0.0",
    "pandas==2.2.2",
    "rasterio==1.3.10",
    "rioxarray==0.16.0",
    "xarray==2024.6.0",
    "matplotlib==3.9.1",
    "scipy==1.14.0",
    "shapely==2.0.4",
    "scikit-learn==1.5.1",
]
