[project]
name = "sdam"
version = "0.1.0"
description = "Bathymetry estimation tool from EO imagery using insitu data and Stumpfs 2003 method. (Stumpf's Differential Attenutation Method - SDAM)"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "geopandas==1.0.1",
    "numpy==2.0.0",
    "pandas==2.2.2",
    "rasterio==1.3.10",
    "rioxarray==0.16.0",
    "xarray==2024.6.0",
    "matplotlib==3.9.1",
    "scipy==1.14.0",
    "shapely==2.0.4",
    "scikit-learn==1.5.1",
]
[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]
[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=sdam"
[tool.setuptools.packages.find]
include = ["sdam"]